# ComputationalHypergraphDiscovery

./: .gitignore  CITATION.cff  COVID_graph_discovery.ipynb  Chemistry_graph_discovery.ipynb  FPUT_graph_discovery.ipynb  LICENSE  README.md  acknowledgment.txt  algebraic_equations_graph_discovery.ipynb  batches.csv  big chemical reaction.ipynb  experiment.py  experiment_launcher.py  france_covid_data.csv  process big chemical reaction uniform data 1200.ipynb  process big chemical reaction uniform data 2400.ipynb  process big chemical reaction uniform data.ipynb  process big chemical reaction.ipynb  pyproject.toml  requirements.txt  sandbox.ipynb
.github/workflows/: python-publish.yml  quick_start.yml  run_algebraic_equations.yml
ComputationalHypergraphDiscovery/: _GraphDiscoveryMain.py  __init__.py  requirements.txt
ComputationalHypergraphDiscovery/Modes/: kernels.py
examples/: COVID_graph_discovery.ipynb  ChemistryNew.ipynb  Chemistry_graph_discovery.ipynb  Gene_graph_discovery.ipynb  SachsData.csv  algebraic_equations_graph_discovery.ipynb  faster_activation_computation.ipynb
results_all_original_BCR/: G_3_3.pkl
results_all_uniform_BCR/: G_0_0.pkl  G_0_7.pkl  G_1_1.pkl  G_2_4.pkl  G_2_8.pkl
src/: GraphDiscovery.py  LICENSE  Modes.py  README.md  plotting_help.py  pyproject.toml  requirements.txt
src/ComputationalHypergraphDiscovery/: _GraphDiscoveryMain.py  __init__.py  decision.py  helper_functions.py  interpolatory.py  non_interpolatory.py  util.py
src/ComputationalHypergraphDiscovery/Modes/: __init__.py  container.py  kernels.py
(+76 files in other folders)
