# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ComputationalHypergraphDiscovery"
version = "1.0.4"
description = "Implements the Computational Hypergraph Discovery algorithm"
readme = "README.md"
authors = [{ name = "Theo Bourdais", email = "tbourdai@caltech.edu"},{ name = "Houman Owhadi", email = "owhadi@caltech.edu"},{ name = "Pau Batlle Franch", email = "pbatllef@caltech.edu"},{ name = "Ricardo Baptista", email = "rsb@caltech.edu"},{ name = "Xianjin Yang", email = "yxjmath@caltech.edu"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Machine Learning","Data Science", "Applied Maths"]
dependencies = [
    "matplotlib",
    "networkx",
    "numpy",
    "scipy"
]
requires-python = ">=3.9"




[tool.bumpver]
current_version = "1.0.4"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

